--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,7 @@ dependencies = [
     "numpy>=1.21.5,<1.25.0",
     "nptyping==2.3.1",
     "Pillow>=9.2.0",
-    "plotly>=5.9.0",
-    "plotly-gif==0.0.3",
+    "plotly>=5.15.0",
     "pandas>=1.5.0",
     "jupyter>=1.0.0",
     "pytest>=7.1.2",
@@ -30,6 +29,7 @@ dependencies = [
     "matplotlib>=3.5.0",
     "opencv-python>=4.6.0",
     "tqdm>=4.64.0",
+    "kaleido>=0.2.1.post1; platform_machine != 'armv7l'",
 ]
 
 [project.optional-dependencies]
@@ -50,6 +50,9 @@ cpu = [
     "torch>=1.12.0",
     "torchvision>=0.13.0",
 ]
+
+[tool.uv]
+exclude-newer = "2024-06-01"
 
 [project.urls]
 Homepage = "https://github.com/your-username/RL-3DbinPacking"
