--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 gymnasium>=0.26.0
 nptyping==2.3.1
-numpy== 1.21.5
-Pillow==9.2.0
-plotly==5.9.0
-pytest==7.1.2
-plotly_gif==0.0.3
-sb3-contrib==1.7
-jupyter
-pandas
+numpy>=1.21.5,<1.25.0
+Pillow>=9.2.0
+plotly>=5.15.0
+pytest>=7.1.2
+sb3-contrib>=1.7.0
+stable-baselines3>=1.7.0
+jupyter>=1.0.0
+pandas>=1.5.0
+matplotlib>=3.5.0
+torch>=1.12.0
 
