1. 브랜치 설정: master -> main 2. exclude-newer 문구를 주석 처리

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ cpu = [
 ]
 
 [tool.uv]
-exclude-newer = "2024-06-01"
+#exclude-newer = "2024-06-01"
 
 [project.urls]
 Homepage = "https://github.com/your-username/RL-3DbinPacking"
